// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FirstAccessProvider Load Children 1`] = `
<Text>
  Mock
</Text>
`;

exports[`FirstAccessProvider Load First Access Stack 1`] = `
<div
  data-testid="FirstAccessStack"
>
  FirstAccessStackMock
</div>
`;

exports[`FirstAccessProvider Loading 1`] = `
<div
  data-testid="Loading"
>
  Loading
</div>
`;

exports[`FirstAccessProvider Toggle first access value 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "opacity": 1,
    }
  }
>
  <View
    style={
      [
        {},
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": "#007AFF",
            "fontSize": 18,
            "margin": 8,
            "textAlign": "center",
          },
        ]
      }
    >
      Toggle
    </Text>
  </View>
</View>
`;

exports[`FirstAccessProvider Toggle first access value 2`] = `
<div
  data-testid="FirstAccessStack"
>
  FirstAccessStackMock
</div>
`;
